# euler-copilot-framework

./: .dockerignore  .env.example  .gitignore  .ruff.toml  CONVERSATION_VARIABLE_FIX.md  Dockerfile  Dockerfile-base  Jenkinsfile  README.en.md  README.md  nohup.out  op.conf  openapi.json  perf.data  pyproject.toml  pytest.ini  requirements.txt  run.sh  start.sh
.gitee/ISSUE_TEMPLATE/: bug.yaml
.gitee/PULL_REQUEST_TEMPLATE/: zh-CN.md
SearchAgent/: README.md  Searchagent.py  modelSet.py  promptSet.py  requirements.txt
apps/: __init__.py  constants.py  gunicorn.conf.py  llm.py  main.py
apps/common/: __init__.py  auth.py  config.py  cryptohub.py  encoder.py  lance.py  mcp_manager_service.py  minio.py  mongo.py  oidc.py  postgres.py  process_handler.py  queue.py  redis_cache.py  security.py  singleton.py  task.py  thread.py  wordscheck.py
apps/cron/: delete_user.py
apps/dependency/: __init__.py  csrf.py  limit.py  session.py  user.py
apps/entities/: __init__.py  appcenter.py  blacklist.py  collection.py  comment.py  enum.py  enum_var.py  file_type.py  flow.py  flow_topology.py  message.py  node.py  plugin.py  pool.py  rag_data.py  record.py  request_data.py  response_data.py  scheduler.py  task.py  user.py  vector.py
apps/llm/: __init__.py  adapters.py  embedding.py  function.py  generator.py  llm.py  model_registry.py  model_types.py  prompt.py  reasoning.py  schema.py  snippet.py  token.py
apps/logger/: __init__.py
apps/manager/: __init__.py  api_key.py  appcenter.py  application.py  audit_log.py  blacklist.py  comment.py  conversation.py  document.py  domain.py  flow.py  gitee_white_list.py  knowledge.py  node.py  plugin_token.py  record.py  service.py  session.py  task.py  token.py  user.py  user_domain.py
apps/middleware/: __init__.py  error_handler.py
apps/models/: __init__.py  abstract.py  app.py  comment.py  conversation.py  document.py  llm.py  mcp.py  minio.py  mongo.py  mysql.py  postgres.py  record.py  redis.py  service.py  session.py  settings.py  task.py  user.py
apps/routers/: __init__.py  api_key.py  appcenter.py  auth.py  blacklist.py  chat.py  client.py  comment.py  conversation.py  document.py  domain.py  file.py  flow.py  health.py  knowledge.py  llm.py  mcp_service.py  mock.py  parameter.py  plugin.py  record.py  sandbox.py  service.py  tag.py  user.py  variable.py
apps/scheduler/: __init__.py  core.py  embedding.py  encoder.py  (+9 more)
assets/: .config.example.toml  .env.example  euler-copilot-frame.sql  host.example.json  logging.example.json
data/: .config.example.toml  config.example.toml  sysagent.service
deploy/: README-authelia.md  README.md
docs/: EulerCopilot无网络环境下部署指南.md  EulerCopilot本地语料上传指南.md  EulerCopilot网络环境下部署指南.md  variable_configuration.md
euler-copilot-plugins/: README.md
euler_copilot_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_center/: README.en.md  README.md  requiremenets.txt  requirements.txt  run.sh
mcp_center/oe_cli_mcp_server/mcp_tools/network_tools/: pyproject.toml  tool.py
mock/: make_data.py
oe-cli-mcp-server/: README.md  mcp-server.service  requirements.txt  run.sh
plugins/: README.en.md
sample/: README.md  README.txt
tests/: __init__.py
witty_mcp_manager/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
witty_mcp_manager/data/: witty-mcp-manager-dev.service  witty-mcp-manager.service
witty_mcp_manager/scripts/: README.md  build-nuitka.sh  build_nuitka.sh  generate_openapi.py  run_integration_tests.sh  test_env.sh
witty_mcp_manager/scripts/reference/test_env/: DEV_VS_PROD_MODE.md  EXAMPLES.md  QUICK_REFERENCE.sh  TEST_ENV_GUIDE.md
witty_mcp_manager/src/witty_mcp_manager/: __init__.py  __main__.py  exceptions.py  url_utils.py
witty_mcp_manager/src/witty_mcp_manager/adapters/: __init__.py  base.py  http.py  sse.py  stdio.py
witty_mcp_manager/src/witty_mcp_manager/cli/: __init__.py  config.py  configure.py  logs.py  main.py  permissions.py  renderer.py  runtime.py  servers.py
witty_mcp_manager/src/witty_mcp_manager/cli/templates/: config_status.txt  daemon_status.txt  error_daemon_connect.txt  error_http.txt  error_journalctl.txt  error_journalctl_not_found.txt  error_permission.txt  error_user_required.txt  info_no_servers.txt  info_no_sessions.txt  server_info.txt  session_status.txt
witty_mcp_manager/src/witty_mcp_manager/config/: __init__.py  config.py
witty_mcp_manager/src/witty_mcp_manager/diagnostics/: __init__.py  checker.py  preflight.py
witty_mcp_manager/src/witty_mcp_manager/ipc/: __init__.py  auth.py  schemas.py  server.py
witty_mcp_manager/src/witty_mcp_manager/ipc/routes/: __init__.py  health.py  registry.py  runtime.py  tools.py
witty_mcp_manager/src/witty_mcp_manager/overlay/: __init__.py  resolver.py  storage.py
witty_mcp_manager/src/witty_mcp_manager/registry/: __init__.py  discovery.py  models.py  normalizer.py
witty_mcp_manager/src/witty_mcp_manager/runtime/: __init__.py  manager.py  recycle.py
witty_mcp_manager/src/witty_mcp_manager/security/: __init__.py  allowlist.py  redaction.py  secrets.py
witty_mcp_manager/tests/: README.md  __init__.py  conftest.py
witty_mcp_manager/tests/adapters/: __init__.py  test_adapters.py  test_global_cache.py
witty_mcp_manager/tests/integration/: README.md  __init__.py  test_mcp_servers.py  test_witty_mcp_manager.py
witty_mcp_manager/tests/unit/: README.md  test_admin_mcp.py  test_cli.py  test_config.py  test_diagnostics.py  test_discovery.py  test_exceptions.py  test_ipc.py  test_ipc_routes.py  test_ipc_server.py  test_models.py  test_normalizer.py  test_overlay.py  test_real_configs.py  test_runtime.py  test_secrets_extended.py  test_security.py
witty_mcp_manager/tests/unit/adapters/: test_adapters.py  test_http_adapter.py
witty_mcp_manager/tests/unit/cli/: test_cli.py  test_renderer.py
witty_mcp_manager/tests/unit/diagnostics/: test_diagnostics.py
witty_mcp_manager/tests/unit/ipc/: test_ipc.py  test_ipc_routes.py  test_ipc_server.py
witty_mcp_manager/tests/unit/registry/: test_discovery.py  test_normalizer.py
witty_mcp_manager/tests/unit/runtime/: test_runtime.py
(+1308 files in other folders)
