[project]
name = "euler-copilot-framework"
version = "0.10.1"
description = "EulerCopilot 后端服务"
requires-python = "==3.11.6"
dependencies = [
    "aiofiles==24.1.0",
    "asyncer==0.0.8",
    "asyncpg==0.30.0",
    "cryptography==42.0.2",
    "fastapi==0.115.12",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "jinja2==3.1.3",
    "jionlp==1.5.22",
    "jsonschema==4.21.1",
    "mcp==1.17.0",
    "minio==7.2.15",
    "ollama==0.6.1",
    "openai==2.3.0",
    "pandas==2.2.2",
    "pgvector==0.4.1",
    "pillow==10.3.0",
    "pydantic==2.11.7",
    "python-jsonpath==1.3.0",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "pyyaml==6.0.1",
    "rich==14.2.0",
    "sqlalchemy==2.0.41",
    "tiktoken==0.9.0",
    "toml==0.10.2",
    "uvicorn==0.34.0",
    "xmltodict==1.0.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

[dependency-groups]
dev = [
    "autodoc-pydantic==2.2.0",
    "coverage==7.7.1",
    "fastapi-cprofile>=0.0.2",
    "fastapi-profiler-lite>=0.3.2",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "ruff==0.12.5",
]
